--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p >
                             It is a <i>Python</i> project that tells you if you could apply for Egypt STEM Schools.
                             <span class="project-links">
-                                <a href="/">GitHub</a> |
+                                <a href="https://github.com/mosaabg/STEM-Gate">GitHub</a> |
                                 <a href="/">ReplIt</a>
                             </span>
                         </p>
@@ -60,7 +60,7 @@
                         <p >
                             <i>Python</i> project can do some functions related to Rigular Polygons.
                             <span class="project-links">
-                                <a href="/">GitHub</a> |
+                                <a href="https://github.com/mosaabg/Polygon-Apps">GitHub</a> |
                                 <a href="/">ReplIt</a>
                             </span>
                         </p>
@@ -74,7 +74,7 @@
                             <i>Website</i> that recommend some STEM References for studying the mentioned subjects.
                             <span class="project-links">
                                 <a href="/">GitHub</a> |
-                                <a href="/">Visit!</a>
+                                <a href="/">Visit</a>
                             </span>
                         </p>
                     </div>
@@ -86,8 +86,21 @@
                         <p >
                             <i>Website</i> just for me.
                             <span class="project-links">
-                                <a href="/">GitHub</a> |
+                                <a href="https://github.com/mosaabg/Mosaab.GA">GitHub</a> |
                                 <a href="#page-top">Here!</a>
+                            </span>
+                        </p>
+                    </div>
+                </li>
+                <hr>
+                <li>
+                    <div class="projects-items" id="ted-ed">    
+                        <span class="subtitle project-title"><i>"STEM Assiut TED-Ed Club"</i> official website</span>
+                        <p >
+                            The official website for <i>STEM Assiut TED-Ed Club</i>.
+                            <span class="project-links">
+                                <a href="https://github.com/mosaabg/Mosaab.GA">GitHub</a> |
+                                <a href="https://stemassiutteded.club">Visit</a>
                             </span>
                         </p>
                     </div>
