--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="about">
         <span class="subtitle" id="about_heading">.about();</span>
         <div class="section-content about-content">
-            <p>I'm Mosaab, who is </p>
+            <p>I'm Mosaab, <a src="/.well-known/discord">discord</a> who is </p>
         </div>
     </section>
     <section id="projects-section">
